src/test/deca/context/invalid/Obj/decl-field-void.deca
// Description:
//    Déclaration d'un champ de type void
//
// Résultat:
//On ne peut pas avoir de champ de type null ou void
//
class A {
    void a;
}
{}